Feat: Adicionar cargo supremo