@@ -2,9 +2,11 @@ package com.migueltcc.fertintelligence.model.auth;
 
 import com.migueltcc.fertintelligence.model.fertintelligence.UserModel;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class UserAuthenticated implements UserDetails {
@@ -16,7 +18,11 @@ public class UserAuthenticated implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        if (user.getCargo() == null) {
+            return Collections.emptyList();
+        }
+
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getCargo().name()));
     }
 
     @Override
